# nosurfin

./: .gitignore  PKGBUILD  README.md  cert_install.sh  cert_install_deb_vm.sh  com.github.bunsermuder.NoSurfin.json  meson.build  nosurfin.spec
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: debbuild.yml
data/: com.github.bunsenmurder.NSUrlManager.conf  com.github.bunsenmurder.NoSurfin.appdata.xml.in  com.github.bunsenmurder.NoSurfin.desktop.in  com.github.bunsenmurder.NoSurfin.gschema.xml  com.github.bunsenmurder.NoSurfin.policy.in  com.github.bunsermuder.NoSurfin.appdata.xml.in  com.github.bunsermuder.NoSurfin.desktop.in  com.github.bunsermuder.NoSurfin.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
nosurfin/: Window.ui  clock.py  com.github.bunsenmurder.NoSurfin.css  dbus_tools.py  editor.py  home.py  main.py  meson.build  misc.py  nosurfin.gresource.xml  nosurfin.in  notify.py  preferences.py  sleep.py  window.py  wizard.py
nosurfin/debug/: start_mitm_dump.py
nosurfin/nosurfin.d/: systemd_wrapper.py
nosurfin/nosurfin.d/filters/: blocklist.py  index.html
nosurfin/nosurfin.d/sh_scripts/: cert_util_pem  cert_util_sys  check_block.sh  cleaner.sh  network_reset.sh  network_setup.sh  pipx_dep_man  run_as_root  sysd_clean.sh
nosurfin/tools/: __init__.py  dbus.py  filechoose.py  gasync.py  misc.py
nosurfin/ui/: CertWizard.ui  Clock.ui  Editor.ui  Home.ui  ListBoxRow.ui  Preferences.ui  Window.ui
nosurfin/url-manager/: com.github.bunsenmurder.NSUrlManager.xml  nsurlmanager-main.c
po/: POTFILES  meson.build
